option java_outer_classname = "LCDrivingBanSetting";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting.parameter";

message DrivingBanSetting{
	required	int64					banIdentify			=1;
	required	int64					beginDate 			=2;
	required	int64					endDate 			=3;
	required	bool					isEveryDay 			=4;
}
